# telsok

./: .gitignore  Makefile  README.md  constants.py  cspell.json  default.nix  flake.nix  helpers.py  pyproject.toml  telsok.py
checker/: browser.py  eniro.py  google.py  pts.py  ratsit.py
components/: main.py
scraper/: docker-compose.yml
static/: style.css
tests/: pts.py
